# zen.process

./: .gitignore  AgentList.cpp  AgentList.hpp  ChangeLog  Makefile  Makefile.am  Pipeline.cpp  Pipeline.hpp  Process.cpp  Process.hpp  ProcessList.cpp  ProcessList.hpp  _Process.hpp  configure  configure.ac  pipeline_test.cpp  process_list.cc  process_list.cpp  process_test.cpp  selfpipetrick.cpp  selfpipetrick.hpp  utils.cpp  utils.hpp  zen_process-0.9.pc.in
m4/: Makefile.in
test/: Makefile.am  dummy.cpp  pipeline_test.cpp  test-pipeline.cpp  test-procman.cpp
zen/: Makefile.am
zen/process/: Makefile.am  Pipe.cpp  Pipe.hpp  Pipeline.cpp  Pipeline.hpp  PipelineIO.cpp  PipelineIO.hpp  ProcessManager.cpp  ProcessManager.hpp  SelfPipeTrickExec.cpp  SelfPipeTrickExec.hpp  selfpipetrick.cpp  selfpipetrick.hpp  types.hpp  utils.cpp  utils.hpp
